fixed filter position when added gaps (items wrapper now under filters in Z place)

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -153,9 +153,11 @@
 
 // Filter
 .vp-filter {
+    position: relative;
     opacity: 0;
     visibility: hidden;
     transition: .7s opacity, .7s visibility;
+    z-index: 1;
 }
 
 // Pagination
